[package]
name = "pgnumeric"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"

[features]
# varlen header in big endian byte order
big-endian-varlen=[]

[dependencies]
lazy_static = "1.4"
smallvec = "1.3"
cfg-if = "0.1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark"
harness = false
